leave functionality added